@@ -10,6 +10,7 @@
 
 
 ## Makefile.Monitor_Monitorlib.am
+
 noinst_LTLIBRARIES = libciaomonlib.la
 
 libciaomonlib_la_CPPFLAGS = \
@@ -18,11 +19,8 @@ libciaomonlib_la_CPPFLAGS = \
 libciaomonlib_la_SOURCES = \
   foo.cpp
 
-libciaomonlib_la_LDFLAGS = \
- -L.
-
-
 ## Makefile.NodeManager_stub.am
+
 noinst_LTLIBRARIES += libNodeManager_stub.la
 
 libNodeManager_stub_la_CPPFLAGS = \
@@ -31,21 +29,15 @@ libNodeManager_stub_la_CPPFLAGS = \
 libNodeManager_stub_la_SOURCES = \
   bar.cpp
 
-libNodeManager_stub_la_LDFLAGS = \
- -L.
-
-
 ## Makefile.NodeManager.am
+
 noinst_PROGRAMS = one
 
 one_SOURCES = \
   one.cpp
 
-one_LDFLAGS = \
-  -L.
-
-
 ## Makefile.lib.am
+
 noinst_LTLIBRARIES += libNodeManager.la
 
 libNodeManager_la_CPPFLAGS = \
@@ -53,10 +45,6 @@ libNodeManager_la_CPPFLAGS = \
 
 libNodeManager_la_SOURCES = \
   two.cpp
-
-libNodeManager_la_LDFLAGS = \
- -L.
-
 
 ## Clean up template repositories, etc.
 clean-local:
