@@ -35,9 +35,6 @@ A_SOURCES = \
   other.inl \
   zzz.inl
 
-A_LDFLAGS = \
-  -L.
-
 ## Makefile.grouping_B.am
 
 BUILT_SOURCES += \
@@ -60,9 +57,6 @@ B_SOURCES = \
   other.inl \
   zzz.inl
 
-B_LDFLAGS = \
-  -L.
-
 ## Makefile.grouping_C.am
 
 BUILT_SOURCES += \
@@ -83,9 +77,6 @@ C_SOURCES = \
   other.cpp \
   clown.h \
   other.inl
-
-C_LDFLAGS = \
-  -L.
 
 ## Makefile.grouping_D.am
 
@@ -108,9 +99,6 @@ D_SOURCES = \
   clown.h \
   other.inl
 
-D_LDFLAGS = \
-  -L.
-
 ## Makefile.grouping_E.am
 
 BUILT_SOURCES += \
@@ -132,9 +120,6 @@ E_SOURCES = \
   clown.h \
   other.inl
 
-E_LDFLAGS = \
-  -L.
-
 ## Makefile.grouping_F.am
 
 BUILT_SOURCES += \
@@ -155,9 +140,6 @@ F_SOURCES = \
   other.cpp \
   clown.h \
   other.inl
-
-F_LDFLAGS = \
-  -L.
 
 ## Makefile.grouping_G.am
 
@@ -181,9 +163,6 @@ G_SOURCES = \
   clown.h \
   other.inl \
   zzz.inl
-
-G_LDFLAGS = \
-  -L.
 
 ## Clean up template repositories, etc.
 clean-local:
